css/layout/navbar.css
.secondary-nav__container {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    position: relative;
}

.secondary-nav__container::after {
    content: " ";
    position: absolute;
    top: 50px;
    width: 100%;
    border-bottom-width: 1px;
    border-bottom-style: solid;
    border-bottom-color: var(--color-lightgray);
}

.secondary-nav__container * {
    vertical-align: top;
}

.secondary-nav--left li,
.secondary-nav--right * {
    display: inline-block;
    align-self: center;
}

.secondary-nav--left {
    display: flex;
    padding: 0;
}

.secondary-nav--right {
    font-size: 0.9em;
}

.secondary-nav--right form {
    position: relative;
}

.secondary-nav--right li:not(:last-child),
.secondary-nav--right form,
.secondary-nav--left li a {
    padding: 8px;
    border-right-style: solid;
    border-right-width: 1px;
    border-right-color: var(--color-lightgray);
}

/*______________________________________________________________*/
.tab-container {
    display: flex;
    flex-direction: row;
    justify-content: center;
    flex-grow: 1;
    align-self: center;
}

.main-navbar {
    display: flex;
    flex-direction: row;
    max-width: 1360px;
    margin: auto;
    text-align: center;
}

.main-navbar__tab {
    overflow: hidden;
    align-self: center;
    padding: 16px;
    font-size: 1.2em;
    border-color: var(--color-medium-gray);
    border-style: solid;
    border-width: 1px;
    border-top-left-radius: 4px;
    border-top-right-radius: 4px;
    border-bottom-color: transparent;
    margin-right: 4px;
}

.main-navbar__tab.active {
    -webkit-box-shadow: 0px -6px 10px 3px var(--color-medium-gray);
    box-shadow: 0px -6px 5px 0px var(--color-medium-gray);
}

.main-navbar__tab li {
    font-family: var(--main-font);
    font-size: 0.9em;
    font-weight: bold;
}

.navbar__dropdown {
    display: none;
    position: absolute;
    left: 0;
    background-color: var(--color-lightgray);
    width: 100%;
    z-index: 1;
}

.navbar__dropdown li {
    padding: 16px;
}

.main-navbar__tab.active .navbar__dropdown,
.main-navbar__tab:focus .navbar__dropdown {
    display: flex;
    justify-content: center;
}

.main-navbar__tab.active .standout-text {
    color: var(--color-black);
    text-decoration: underline;
}

.primary-link.standout-text {
    position: relative;
}

.primary-link.standout-text::after {
    background: none repeat scroll 0 0 transparent;
    bottom: 0;
    content: "";
    display: block;
    height: 2px;
    left: 50%;
    position: absolute;
    background: black;
    transition: width 0.3s ease 0s, left 0.3s ease 0s;
    width: 0;
}

.main-navbar__tab:hover .primary-link.standout-text::after {
    width: 100%;
    left: 0;
}

.overlay__close,
.overlay__footer {
    display: none;
}

.navbar__slider {
    max-height: 0;
    overflow: hidden;
}

/*
.sticky {
    position: sticky;
    position: -webkit-sticky;
    top: 0;
}*/

/*==============COLLAPSIBLE==================*/
@media (max-width: 1024px) {
    .main-navbar {
        margin: unset;
    }

    .main-navbar__container {
        margin-top: -16px;
    }

    .main-navbar__tab {
        width: 100%;
        padding: 8px;
        border: none;
        border-bottom-width: 1px;
        border-bottom-style: solid;
        border-bottom-color: var(--color-dark-shadow);
    }

    .main-navbar__tab.active {
        box-shadow: none;
    }

    .all-headers__container.visible {
        display: flex;
        flex-direction: column;
        padding: 2%;
    }

    .header-logo {
        display: inline-block;
        position: fixed;
        top: 0;
    }

    .tab-container {
        display: flex;
        flex-direction: column;
    }

    .main-navbar__tab.active .navbar__dropdown,
    .main-navbar__tab:focus .navbar__dropdown {
        justify-content: center;
        margin-top: -16px;
    }

    .main-navbar__tab.active .navbar__dropdown.visible,
    .main-navbar__tab:focus .navbar__dropdown.visible {
        display: flex;
        position: relative;
        padding: 8%;
        flex-direction: column;
    }

    .main-navbar__tab li {
        font-family: var(--titles-font);
    }

    .navbar__dropdown.visible {
        display: flex;
        flex-direction: column;
        position: relative;
    }

    .navbar__dropdown li {
        padding: 0;
        line-height: 2em;
    }

    .navbar__dropdown li a {
        padding: 16px;
        display: inline-block;
    }

    .navbar__dropdown li:not(:first-child) {
        border-bottom-width: 1px;
        border-bottom-style: solid;
        border-bottom-color: var(--color-dark-shadow);
    }

    .main-navbar__tab::before {
        content: ">";
        display: block;
        position: absolute;
        right: 12%;
    }

    .primary-link.standout-text {
        text-align: center;
        pointer-events: none;
        position: relative;
    }

    .all-headers__container.overlay-content {
        display: flex;
        flex-direction: column-reverse;
        justify-content: center;
        z-index: 6;
    }

    .navbar__dropdown.overlay-content {
        flex-direction: column;
        max-height: 800px;
    }

    .overlay-content {
        height: 100%;
        width: 100%;
        position: fixed;
        top: 50px;
        /*right: 0;*/
        left: 100%;
        background-color: var(--color-white);
        overflow-x: hidden;
        transition: all 0.3s ease-in-out;
        display: flex;
        justify-content: flex-end;
        transform: translateX(100%);
    }

    .overlay--active {
        width: 100%;
        padding-left: 8%;
        padding-right: 8%;
        padding-top: 8%;
        display: flex;
        transform: translateX(0);
        left: 0;
        right: 0;
    }

    .overlay__close {
        font-weight: bold;
        font-size: 1em;
        display: flex;
    }

    .overlay__footer {
        display: block;
        position: fixed;
        z-index: 9;
        bottom: 0;
        background-color: var(--color-black);
        color: var(--color-white);
        margin-left: -8%;
        width: 100%;
        padding: 4%;
        -webkit-box-shadow: 0px -3px 17px 5px rgba(0, 0, 0, 0.30);
        box-shadow: 0px -3px 17px 5px rgba(0, 0, 0, 0.30);
    }

    .button-like--square {
        width: 100%;
    }

    .secondary-nav--left {
        display: none;
    }

    .secondary-nav__container::after {
        display: none;
    }


    .secondary-nav--right {
        display: flex;
        flex-direction: column;
        width: 100%;
        padding: 2%;
        margin: 0;
    }

    .secondary-nav--right form,
    .secondary-nav--right form input[type="search"] {
        width: 100%
    }

    .secondary-nav--right li {
        display: none;
    }

    .nav-carousel__container {
        display: block;
        position: fixed;
        width: 100%;
        z-index: 9;
        background-color: var(--color-white);
        color: var(--color-black);
        padding: 4%;
        top: 60px;
        margin-left: -8%;
    }

    .navbar__slider {
        min-height: 80px;
        width: 100%;
        padding: 0;
        overflow: visible;
    }

    .navbar__slider .slider__slide {
        width: 100px;
        min-height: 80px;
    }

    .navbar__slider .slider__slide div {
        width: 40px;
        margin: auto;
    }

    .navbar__slider .slider__slide small {
        max-width: 60px;
        margin: auto;
        text-align: center;
    }

}

